[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Mister Pixel Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/button.png" type="Texture" id=2]
[ext_resource path="res://Sprites/bg_test.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="Level0" type="Node"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fondo" type="NinePatchRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Botones" type="VBoxContainer" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -52.0
margin_right = 100.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jugar" type="TextureButton" parent="Control/Botones"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Control/Botones/Jugar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -12.5
margin_right = 30.0
margin_bottom = 12.5
custom_fonts/font = SubResource( 1 )
text = "Jugar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Practica" type="TextureButton" parent="Control/Botones"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 104.0
rect_min_size = Vector2( 200, 50 )
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Control/Botones/Practica"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.5
margin_top = -12.5
margin_right = 45.5
margin_bottom = 12.5
custom_fonts/font = SubResource( 1 )
text = "Practica"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Salir" type="TextureButton" parent="Control/Botones"]
margin_top = 108.0
margin_right = 200.0
margin_bottom = 158.0
rect_min_size = Vector2( 200, 50 )
texture_normal = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="Control/Botones/Salir"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -30.0
margin_top = -12.5
margin_right = 30.0
margin_bottom = 12.5
custom_fonts/font = SubResource( 1 )
text = "Salir"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/Botones/Jugar" to="Control" method="_on_Jugar_pressed"]
[connection signal="pressed" from="Control/Botones/Practica" to="Control" method="_on_Practica_pressed"]
[connection signal="pressed" from="Control/Botones/Salir" to="Control" method="_on_Salir_pressed"]
